--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,8 @@
   <artifactId>desafio</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>desafio</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <name>Desafio1</name>
+  <url>https://github.com/CarlosMouraDev/Desafio1</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -20,7 +19,26 @@
   </properties>
 
   <dependencies>
-    <!-- TODO: Inserir as dependências do sistema... -->
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>6.2.6.Final</version>
+    </dependency>
+    <dependency>
+      <groupId>jakarta.persistence</groupId>
+      <artifactId>jakarta.persistence-api</artifactId>
+      <version>3.1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.6.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>2.0.9</version>
+    </dependency>
   </dependencies>
 
 </project>
